--- a/game.html
+++ b/game.html
@@ -51,14 +51,14 @@ body {
 /* 台詞：在貓咪上方，距離約 20px */
 #dialogue-text {
     position: absolute;
-    top: -80px;      /* 台詞在 kitten 上方，距離約 20px（負值代表上方）*/
+    top: -100px;      /* 台詞在 kitten 上方，距離約 20px（負值代表上方）*/
     left: 50%;
     transform: translateX(-50%);
     color: #4b0082;
-    font-size: 4.5vw;
+    font-size: 20px;
     font-weight: bold;
     text-align: center;
-    max-width: 300px;   /* 限制寬度，最多兩行 */
+    max-width: 500px;   /* 限制寬度，最多兩行 */
     line-height: 1.2;
     z-index: 3;
     word-break: break-word;
