--- a/game.html
+++ b/game.html
@@ -42,23 +42,23 @@ body {
     position: absolute;
     bottom: 10px;   /* 貓咪左下 */
     left: -30px;    /* 微調位置 */
-    width: 130px;   /* 原本大小，JS 會依條件改 */
+    width: 130px;   /* 初始大小，會由 JS 覆蓋剪刀大小 */
     height: auto;
     z-index: 2;
     transition: none; /* 避免平移動畫 */
 }
 
-/* 台詞：在貓咪上方，距離約 20px */
+/* 台詞：在貓咪上方 */
 #dialogue-text {
     position: absolute;
-    top: -90px;      
+    top: -90px;
     left: 50%;
     transform: translateX(-50%);
     color: #4b0082;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    max-width: 1000px;   
+    max-width: 1000px;
     line-height: 1.2;
     z-index: 3;
     word-break: break-word;
@@ -66,7 +66,6 @@ body {
     white-space: normal;
 }
 
-/* 其餘樣式保留 */
 #emoji-display { font-size: 45vw; position: absolute; top: 52%; left: 50%; transform: translate(-50%, -50%); pointer-events: none; line-height: 1; z-index: 5; }
 
 .choice-buttons { display: flex; gap: 30px; margin-bottom: 3vh; }
@@ -83,7 +82,6 @@ body {
 .player-buttons { display: flex; gap: 30px; }
 .player-buttons img { width: 70px; height: 70px; cursor: pointer; opacity: 0; transform: translateY(20px); transition: opacity 0.8s, transform 0.8s; }
 
-/* 彩屑和素材掉落樣式 */
 .falling-item { position: fixed; pointer-events: none; top: -50px; animation-name: fall; animation-timing-function: ease-in; animation-fill-mode: forwards; z-index: 20; }
 @keyframes fall { 0% { transform: translateY(0) rotate(0deg); opacity:1; } 100% { transform: translateY(100vh) rotate(360deg); opacity:0; } }
 </style>
@@ -137,14 +135,62 @@ const computerOptions = ['scissors2.png','rock2.png','paper2.png'];
 let noClickCount = 0;
 let firstClick = true;
 
-const catDialogues = { /* 原本台詞池保持不變 */ };
+const catDialogues = {
+    lose: {
+        1: ["…咪只是大意了！下局才不會輸給你呢！😖",
+            "才、才不是讓你啦！再來一次咪一定贏！😡",
+            "咪今天狀態不好而已…再玩一局嘛？😫"],
+        2: ["欸？僥倖而已啦！僥倖！🤯",
+            "喂喂…你認真了喔？😧",
+            "咦？連勝？不行，咪要專心起來了！😤"],
+        4: ["好吧……這次算你贏，給咪等著，咪會復仇的！！😬",
+            "可惡…我明明有預判的說……😨",
+            "欸？你怎麼這麼厲害… 不行，咪要雪恥！😠",
+            "喂！！你是不是偷學咪拳法！☹️"],
+        5: ["怎麼回事…咪的貓咪直覺失靈了嗎？！😨",
+            "不行！不行！咪一定要翻盤！😡",
+            "對不起，咪錯了…再給咪一次機會喵……🥹",
+            "……（沉默）咪累了……😭"]
+    },
+    win: {
+        1: ["咪贏了！要再來一局嗎？😝",
+            "欸？你是不是出得有點慢？🫢",
+            "你下局能贏咪嘛？😏",
+            "嘿嘿，被咪抓到了吧～🤪"],
+        2: ["連贏兩局～咪今天說不定很強？😳",
+            "嘿～你該不會被咪看穿了吧？😏",
+            "欸？又贏了？你的套路好像有點明顯哦～🫣",
+            "欸？兩連敗？！要不要休息一下再來？🤨",
+            "又輸？你今天狀態是不是不太行哦😗"],
+        4: ["哎呀～你這樣下去會被咪一直贏喔～🫣",
+            "咪是不是該收斂一下實力呢？（才不會）🤭",
+            "是不是該承認咪是猜拳天才🤩",
+            "咪都不好意思贏太多了🤪"],
+        5: ["五連勝～咪今天是神咪吧！😼",
+            "你是不是該換個策略了？看起來沒用喵～😏",
+            "咪已經準備好六連勝了，你呢～🤩",
+            "這已經不是猜拳，是實力的差距咪～🫣",
+            "喵哈哈，又贏了！你還敢挑戰咪嗎？😝"]
+    },
+    draw: {
+        normal: ["喵？平手？！那…再來一次！😛",
+                 "你是不是偷看咪想出什麼？🫤",
+                 "哼，這次算你運氣好…再比一次！😖",
+                 "平局～那就再戰一局！😵‍💫",
+                 "？！下局咪必贏😠"],
+        streak: ["又平手？！你也太難纏了咪～😵‍💫",
+                 "欸？怎麼老是平手啊…😳",
+                 "平手又平手…這樣咪要生氣了！😤",
+                 "咦？你是不是偷偷猜到咪的套路？😵",
+                 "咪有點受挫…不行，再來！😖"]
+    }
+};
 
-// 連勝/連敗/平手計數
 let winStreak = 0;
 let loseStreak = 0;
 let drawStreak = 0;
-
 let typingInterval = null;
+
 function showDialogue(text){
     if(typingInterval) clearInterval(typingInterval);
     dialogueText.textContent = '';
@@ -216,14 +262,13 @@ playerButtons.forEach(btn=>{
     btn.addEventListener('click',()=>{
         const playerChoice = btn.getAttribute('data-choice');
         const computerChoiceFile = computerOptions[Math.floor(Math.random()*3)];
-        
-        computerChoiceImg.src = computerChoiceFile;
 
-        // 依圖片改大小
+               // 改變圖片大小：剪刀稍小，其他保持
+        computerChoiceImg.src = computerChoiceFile;
         if(computerChoiceFile === 'scissors2.png'){
-            computerChoiceImg.style.width = '100px'; // 剪刀小一點
+            computerChoiceImg.style.width = '115px';
         } else {
-            computerChoiceImg.style.width = '130px'; // 其他保持原本大小
+            computerChoiceImg.style.width = '130px';
         }
 
         if(firstClick){
@@ -254,7 +299,7 @@ playerButtons.forEach(btn=>{
         const line = pickDialogue(result);
         showDialogue(line);
 
-                if(result==='Win'){
+        if(result==='Win'){
             const fallingItems=['c.png','ch.png','pp.png'];
             const colors=['#f94144','#f3722c','#f9c74f','#90be6d','#43aa8b','#577590','#f72585','#7209b7'];
             for(let i=0;i<60;i++){
