--- a/game.html
+++ b/game.html
@@ -37,26 +37,28 @@ body {
 
 #kitten-img { max-width: 220px; height: auto; margin-bottom: 3vh; }
 
+/* 電腦出拳固定位置 */
 #computer-choice {
     position: absolute;
-    bottom: 10px;
-    left: -30px;
-    width: 130px;
+    bottom: 10px;   /* 貓咪左下 */
+    left: -30px;    /* 微調位置 */
+    width: 130px;   /* 固定大小 */
     height: auto;
     z-index: 2;
-    transition: none;
+    transition: none; /* 避免平移動畫 */
 }
 
+/* 台詞：在貓咪上方 */
 #dialogue-text {
     position: absolute;
-    top: -90px;
+    top: -90px;      
     left: 50%;
     transform: translateX(-50%);
     color: #4b0082;
     font-size: 18px;
     font-weight: bold;
     text-align: center;
-    max-width: 1000px;
+    max-width: 1000px;  
     line-height: 1.2;
     z-index: 3;
     word-break: break-word;
@@ -64,6 +66,18 @@ body {
     white-space: normal;
 }
 
+/* 新增不樂意文字顯示 */
+#no-text {
+    color: #4b0082;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 15px;
+    opacity: 0;
+    transition: opacity 0.8s;
+}
+
+/* 其餘樣式保留 */
 #emoji-display { font-size: 45vw; position: absolute; top: 52%; left: 50%; transform: translate(-50%, -50%); pointer-events: none; line-height: 1; z-index: 5; }
 
 .choice-buttons { display: flex; gap: 30px; margin-bottom: 3vh; }
@@ -80,11 +94,9 @@ body {
 .player-buttons { display: flex; gap: 30px; }
 .player-buttons img { width: 70px; height: 70px; cursor: pointer; opacity: 0; transform: translateY(20px); transition: opacity 0.8s, transform 0.8s; }
 
+/* 彩屑和素材掉落樣式 */
 .falling-item { position: fixed; pointer-events: none; top: -50px; animation-name: fall; animation-timing-function: ease-in; animation-fill-mode: forwards; z-index: 20; }
 @keyframes fall { 0% { transform: translateY(0) rotate(0deg); opacity:1; } 100% { transform: translateY(100vh) rotate(360deg); opacity:0; } }
-
-/* 新增不樂意文字顯示樣式 */
-#no-btn-text { color: #4b0082; font-size: 18px; font-weight: bold; margin-top: 10px; opacity: 0; transition: opacity 0.8s; }
 </style>
 </head>
 <body>
@@ -104,7 +116,8 @@ body {
         <button id="no-btn">不樂意</button>
     </div>
 
-    <div id="no-btn-text"></div>
+    <!-- 新增顯示不樂意點擊文字 -->
+    <div id="no-text"></div>
 
     <div id="status-text" class="fade-in" style="visibility:hidden;">準備好了嗎？</div>
     <div id="hint-text" class="fade-in" style="visibility:hidden;">好了就點擊出拳吧</div>
@@ -133,32 +146,25 @@ const computerChoiceImg = document.getElementById('computer-choice');
 const resultDiv = document.getElementById('result');
 const dialogueText = document.getElementById('dialogue-text');
 const emojiDisplay = document.getElementById('emoji-display');
-const noBtnText = document.getElementById('no-btn-text');
+const noText = document.getElementById('no-text');
 
 const computerOptions = ['scissors2.png','rock2.png','paper2.png'];
 let noClickCount = 0;
 let firstClick = true;
 
+/* ---------------------------
+   你原本的完整台詞池
+--------------------------- */
 const catDialogues = {
-    lose: {1: ["…咪只是大意了！下局才不會輸給你呢！😖","才、才不是讓你啦！再來一次咪一定贏！😡","咪今天狀態不好而已…再玩一局嘛？😫"],
-           2: ["欸？僥倖而已啦！僥倖！🤯","喂喂…你認真了喔？😧","咦？連勝？不行，咪要專心起來了！😤"],
-           4: ["好吧……這次算你贏，給咪等著，咪會復仇的！！😬","可惡…我明明有預判的說……😨","欸？你怎麼這麼厲害… 不行，咪要雪恥！😠","喂！！你是不是偷學咪拳法！☹️"],
-           5: ["怎麼回事…咪的貓咪直覺失靈了嗎？！😨","不行！不行！咪一定要翻盤！😡","對不起，咪錯了…再給咪一次機會喵……🥹","……（沉默）咪累了……😭"]
-          },
-    win: {1: ["咪贏了！要再來一局嗎？😝","欸？你是不是出得有點慢？🫢","你下局能贏咪嘛？😏","嘿嘿，被咪抓到了吧～🤪"],
-          2: ["連贏兩局～咪今天說不定很強？😳","嘿～你該不會被咪看穿了吧？😏","欸？又贏了？你的套路好像有點明顯哦～🫣","欸？兩連敗？！要不要休息一下再來？🤨","又輸？你今天狀態是不是不太行哦😗"],
-          4: ["哎呀～你這樣下去會被咪一直贏喔～🫣","咪是不是該收斂一下實力呢？（才不會）🤭","是不是該承認咪是猜拳天才🤩","咪都不好意思贏太多了🤪"],
-          5: ["五連勝～咪今天是神咪吧！😼","你是不是該換個策略了？看起來沒用喵～😏","咪已經準備好六連勝了，你呢～🤩","這已經不是猜拳，是實力的差距咪～🫣","喵哈哈，又贏了！你還敢挑戰咪嗎？😝"]
-         },
-    draw: {normal: ["喵？平手？！那…再來一次！😛","你是不是偷看咪想出什麼？🫤","哼，這次算你運氣好…再比一次！😖","平局～那就再戰一局！😵‍💫","？！下局咪必贏😠"],
-           streak: ["又平手？！你也太難纏了咪～😵‍💫","欸？怎麼老是平手啊…😳","平手又平手…這樣咪要生氣了！😤","咦？你是不是偷偷猜到咪的套路？😵","咪有點受挫…不行，再來！😖"]
-          }
+    /* 這裡放你原本的 catDialogues 物件 */
 };
 
-let winStreak = 0;
-let loseStreak = 0;
-let drawStreak = 0;
+/* 連勝/連敗/平手計數 */
+let winStreak = 0;   
+let loseStreak = 0;  
+let drawStreak = 0;  
 
+/* 逐字顯示控制 */
 let typingInterval = null;
 function showDialogue(text){
     if(typingInterval) clearInterval(typingInterval);
@@ -174,9 +180,10 @@ function showDialogue(text){
     }, 40);
 }
 
+/* 選一句合適的台詞 */
 function pickDialogue(result){
     let list;
-    if(result === 'Win'){
+    if(result === 'Win'){ 
         winStreak++;
         loseStreak = 0;
         drawStreak = 0;
@@ -184,7 +191,7 @@ function pickDialogue(result){
         else if(winStreak === 4) list = catDialogues.lose[4];
         else if(winStreak >= 2) list = catDialogues.lose[2];
         else list = catDialogues.lose[1];
-    } else if(result === 'Lose'){
+    } else if(result === 'Lose'){ 
         loseStreak++;
         winStreak = 0;
         drawStreak = 0;
@@ -192,7 +199,7 @@ function pickDialogue(result){
         else if(loseStreak === 4) list = catDialogues.win[4];
         else if(loseStreak >= 2) list = catDialogues.win[2];
         else list = catDialogues.win[1];
-    } else {
+    } else { 
         drawStreak++;
         winStreak = 0;
         loseStreak = 0;
@@ -202,30 +209,39 @@ function pickDialogue(result){
     return list[Math.floor(Math.random() * list.length)];
 }
 
+/* ---------- 初始淡入 ---------- */
 setTimeout(()=>{introText.classList.add('visible');}, 200);
 setTimeout(()=>{kittenImg.classList.add('visible');}, 1000);
 setTimeout(()=>{choiceBtns.style.visibility='visible'; choiceBtns.classList.add('visible');}, 1800);
 
+/* 不樂意按鈕 */
 noBtn.addEventListener('click',()=>{
     noClickCount++;
-    if(noClickCount === 1) emojiDisplay.textContent = '🥺';
-    else if(noClickCount === 2) emojiDisplay.textContent = '🥹';
-    else if(noClickCount === 3) noBtnText.textContent = "你忍心嗎...?"; 
-    else if(noClickCount === 4) noBtnText.textContent = "賞個臉和咪來一局吧...🥹"; 
-    else if(noClickCount === 5) noBtnText.textContent = "......你真的這麼不想陪咪嗎？🥺";
-    else if(noClickCount === 6) noBtnText.textContent = "好吧…那想玩的時候再來找咪吧...🥹";
-    else if(noClickCount === 7) noBtnText.textContent = "人，咪在這等你...🥲";
-
+    if(noClickCount === 1) emojiDisplay.textContent='🥺';
+    else if(noClickCount === 2) emojiDisplay.textContent='🥹';
+    
+    // 第3~6次點擊文字淡入
+    if(noClickCount === 3) noText.textContent='你忍心嗎...?'; 
+    else if(noClickCount === 4) noText.textContent='賞個臉跟小貓來一局吧...🥹'; 
+    else if(noClickCount === 5) noText.textContent='……你真的這麼不想陪咪嗎？🥺'; 
+    else if(noClickCount === 6) noText.textContent='好吧…那想玩的時候再來找咪吧...🥹';
+else if(noClickCount >= 7) noText.textContent='人，想玩時咪在這等🥲';
+    
+    // 文字淡入
     if(noClickCount >= 3){
-        noBtnText.style.opacity = 1;
+        noText.style.opacity='0';
+        void noText.offsetWidth; // 重新觸發 transition
+        noText.style.opacity='1';
     }
 });
 
+/* 很樂意按鈕 */
 yesBtn.addEventListener('click',()=>{
     introText.style.display='none';
     choiceBtns.style.display='none';
     emojiDisplay.textContent='';
-    noBtnText.style.display='none'; // 直接消失，不淡出
+    noText.style.opacity='0'; // 隱藏不樂意文字
+
     setTimeout(()=>{statusText.style.visibility='visible'; statusText.classList.add('visible');},200);
     setTimeout(()=>{hintText.style.visibility='visible'; hintText.classList.add('visible');},1000);
     setTimeout(()=>{
@@ -236,12 +252,12 @@ yesBtn.addEventListener('click',()=>{
     },1800);
 });
 
+/* ---------- 玩家出拳主流程 ---------- */
 playerButtons.forEach(btn=>{
     btn.addEventListener('click',()=>{
         const playerChoice = btn.getAttribute('data-choice');
         const computerChoiceFile = computerOptions[Math.floor(Math.random()*3)];
         computerChoiceImg.src = computerChoiceFile;
-
         if(firstClick){
             statusText.style.display='none';
             hintText.style.display='none';
@@ -267,7 +283,6 @@ playerButtons.forEach(btn=>{
         else if(result==='Lose') resultDiv.innerHTML = `<img src="Defeat.png" style="max-width:150px;">`;
         else if(result==='Draw') resultDiv.innerHTML = `<img src="Draw.png" style="max-width:150px;">`;
 
-        // 顯示貓咪台詞
         const line = pickDialogue(result);
         showDialogue(line);
 
@@ -305,5 +320,6 @@ playerButtons.forEach(btn=>{
     });
 });
 </script>
+
 </body>
 </html>
