--- a/game.html
+++ b/game.html
@@ -186,7 +186,9 @@ noBtn.addEventListener('click',()=>{
     } else if(noClickCount === 5){
         typeNoMessage('……你真的這麼不想陪咪嗎？🥺');
     } else if(noClickCount === 6){
-        typeNoMessage('好吧……那想玩的時候再來找咪吧...🥹');
+        typeNoMessage('好吧…那想玩的時候再來找咪吧...🥹');
+    }else if(noClickCount === 7){
+        typeNoMessage('人，想玩時咪會在這🥲');
     }
 });
 
